--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_native_splash: ^2.4.4
   http: ^1.2.2
   flutter_dotenv: ^5.2.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
