--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,9 @@ flutter:
   assets:
     - .env
     - assets/icons/
+    - assets/home/
     - assets/logo/
+    - assets/logo/bookost_logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -125,7 +127,6 @@ flutter:
         - asset: fonts/PlusJakartaSans-ExtraBoldItalic.ttf
           weight: 800
           style: italic
-
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
