--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - .env
     - assets/icons/
     - assets/home/
+    - assets/hero/
     - assets/logo/
     - assets/logo/bookost_logo.png
   #   - images/a_dot_ham.jpeg
